--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.2.3",
+        "@vuelidate/core": "^2.0.2",
+        "@vuelidate/validators": "^2.0.2",
+        "vee-validate": "^4.9.4",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.0.13",
-        "vue-toastification": "^2.0.0-rc.5"
+        "vue-toastification": "^2.0.0-rc.5",
+        "vue-touch": "^2.0.0-beta.4",
+        "vue3-touch-events": "^4.1.2",
+        "vuelidate": "^0.7.7"
     }
 }
