--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vee-validate": "^4.9.4",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
+        "vue-loading-button": "^0.2.0",
         "vue-router": "^4.0.13",
         "vue-toastification": "^2.0.0-rc.5",
         "vue-touch": "^2.0.0-beta.4",
