--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
         "@vitejs/plugin-vue": "^4.2.3",
         "@vuelidate/core": "^2.0.2",
         "@vuelidate/validators": "^2.0.2",
+        "datatables.net": "^1.13.4",
+        "datatables.net-bs5": "^1.13.4",
+        "datatables.net-buttons-bs5": "^2.3.6",
+        "datatables.net-responsive-bs5": "^2.4.1",
+        "datatables.net-select": "^1.6.2",
+        "datatables.net-vue3": "^2.1.0",
+        "jszip": "^3.10.1",
+        "pdfmake": "^0.2.7",
         "vee-validate": "^4.9.4",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
