--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "axios": "^1.4.0",
         "laravel-vite-plugin": "^0.7.5",
+        "pdfmake": "^0.2.7",
         "vite": "^4.0.0"
     },
     "dependencies": {
@@ -21,15 +22,15 @@
         "datatables.net-select": "^1.6.2",
         "datatables.net-vue3": "^2.1.0",
         "jszip": "^3.10.1",
-        "pdfmake": "^0.2.7",
         "vee-validate": "^4.9.4",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-loading-button": "^0.2.0",
-        "vue-router": "^4.0.13",
+        "vue-router": "^4.2.2",
         "vue-toastification": "^2.0.0-rc.5",
         "vue-touch": "^2.0.0-beta.4",
         "vue3-touch-events": "^4.1.2",
-        "vuelidate": "^0.7.7"
+        "vuelidate": "^0.7.7",
+        "vuex": "^4.0.2"
     }
 }
