--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@vee-validate/i18n": "^4.9.6",
+        "@vee-validate/rules": "^4.9.6",
         "@vitejs/plugin-vue": "^4.2.3",
         "@vuelidate/core": "^2.0.2",
         "@vuelidate/validators": "^2.0.2",
@@ -22,7 +24,7 @@
         "datatables.net-select": "^1.6.2",
         "datatables.net-vue3": "^2.1.0",
         "jszip": "^3.10.1",
-        "vee-validate": "^4.9.4",
+        "vee-validate": "^4.9.6",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-loading-button": "^0.2.0",
