--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "vue-router": "^4.2.2",
         "vue-toastification": "^2.0.0-rc.5",
         "vue-touch": "^2.0.0-beta.4",
+        "vue3-select2-component": "^0.1.7",
         "vue3-touch-events": "^4.1.2",
         "vuelidate": "^0.7.7",
         "vuesax": "^4.0.1-alpha.25",
